// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions dispatches LOADING  when getCharacter request is successful 1`] = `
Array [
  Object {
    "type": "LOADING",
  },
]
`;

exports[`Actions dispatches LOADING  when getCharacter request is successful 2`] = `
Array [
  Object {
    "payload": Array [],
    "type": "SELECT_MOVIE",
  },
]
`;

exports[`Actions dispatches LOADING  when getMovies request is successful 1`] = `
Array [
  Object {
    "type": "LOADING",
  },
]
`;

exports[`Actions dispatches LOADING  when getmovie request is successful 1`] = `
Array [
  Object {
    "type": "LOADING",
  },
]
`;
